# PolyNet-Framework

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: DIESEM.py
src/: main.py  mnist_speedup.py  softmaxe.py
src/PolyGPT/: README.md  run.py  train.py  train_wiki2.py
